# seimo-duomenys-2

./: .gitignore  pyproject.toml
dbt_seimas/: dbt_project.yml
dbt_seimas/models/: schema.yml
dbt_seimas/models/dev/: balsavimai.sql  balsavimai_individ.sql  kadencijos.sql  seimo_nariai.sql
dbt_seimas/models/example/: my_first_dbt_model.sql
dbt_seimas/reports/: package.json
dbt_seimas/reports/pages/: index.md
dbt_seimas/reports/pages/balsavimai/: [id].md
dbt_seimas/reports/pages/seimo-nariai/: [seimo_narys].md
dbt_seimas/reports/sources/main_db/: bals_individ.sql  connection.yaml  seimo_narys.sql
dbt_seimas/reports/sources/remote_seimas/: bals_individ.sql  balsavimai.sql  connection.yaml  kadencijos.sql
seimo_duomenys_2/: load_data.py
