[tool.poetry]
name = "seimo-duomenys-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pytest = "^8.3.2"
dlt = {extras = ["clickhouse"], version = "^0.5.4"}
dbt-core = "^1.8.6"
dbt-clickhouse = "^1.8.3"
xmltodict = "^0.13.0"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
