[tool.poetry]
name = "seimo-duomenys-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pytest = "^8.3.2"
dbt-core = "^1.8.6"
xmltodict = "^0.13.0"
streamlit = "^1.38.0"
duckdb = "0.10.2"
dlt = {extras = ["motherduck"], version = "^1.3.0"}
dbt-duckdb = "1.8.1"
tqdm = "^4.66.5"
line-profiler = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
